--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,5 @@
 //variables
+@import "variables/variables";
 @import "variables/mixins";
 @import "font-awesome-sprockets";
 @import "font-awesome";
@@ -25,10 +26,14 @@
 @import 'creditcards/new.scss';
 @import 'signups/done.scss';
 @import 'signups/header.scss';
-@import 'font-awesome-sprockets';
-@import 'font-awesome';
 @import 'signups/index.scss';
 @import 'addresses/new.scss';
 @import 'devise/sessions/new';
 @import 'devise/sessions/new';
 @import 'signups/footer.scss';
+
+@import 'font-awesome-sprockets';
+@import 'font-awesome';
+@import 'signups/step1.scss';
+@import 'addresses/new.scss';
+@import 'creditcards/new.scss'
