--- a/app/views/addresses/new.html.haml
+++ b/app/views/addresses/new.html.haml
@@ -31,7 +31,7 @@
       - required = '必須'
       - optional = '任意'
       .user_address
-        .field
+        .field-address
           .field-label
             = f.label :"お名前", class: 'user_address_name'
             %span.min #{required}
