--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -117,7 +117,9 @@
                         © 2019 Fmarket
 
     .PostItems
-        .PostItems__Button
-            .PostItems__Button__icon 出品
-            %i.button-icon.fas.fa-camera
+        .PostItems__Button 
+            出品
+            .PostItems__Icon 
+                %i.fas.fa-camera.fa-3x
+
 
