Header Footer Icon_Done_v2

--- a/app/assets/stylesheets/homes/home.scss
+++ b/app/assets/stylesheets/homes/home.scss
@@ -130,11 +130,11 @@ img.footer-logo{
 
       &__Menu{
         display: inline-block;
-        -webkit-box-align: center;
         align-items: center;
         font-size: 14px;
         height: 32px;
         padding-right: 30px;
+        padding-top: 20px;
         transform: scale(1);
         transition: all 0.3s ease-out 0s;
 
