--- a/app/views/signups/step1.html.haml
+++ b/app/views/signups/step1.html.haml
@@ -1,5 +1,3 @@
-%h1 Signups#step1
-%p Find me in app/views/signups/step1.html.haml
 %header.single-header
   %h1
     %a 画像リンク
@@ -10,7 +8,7 @@
   %section.l-single-container
     %h2.l-single-inner_registration
       会員情報入力
-    = form_for @user, url: registrations_path do |f|
+    = form_for @user, url: step2_signups_path, method: :get do |f|
       - required = '必須'
       .user_information
         .field
@@ -18,17 +16,17 @@
             = f.label :"ニックネーム", class: 'left-label'
             %span.min #{required}
           .field-input
-            = f.text_field :nickname, autofocus: true, class: 'user_nickname', placeholder: '例）フリマ123'
+            = f.text_field :nickname, autofocus: true, class: 'user_nickname', id: 'nickname', placeholder: '例）フリマ123'
         .field
           .field-label
             = f.label :"メールアドレス"
             %span.min #{required}
           .field-input
-            = f.email_field :email, class: 'user_email', placeholder: 'PC・携帯どちらでも可'
+            = f.email_field :email, class: 'user_email', id: 'email', placeholder: 'PC・携帯どちらでも可'
         .field
           = f.label :"パスワード"
           %span.min #{required}
-          = f.password_field :password, class: 'user_password', placeholder: '７文字以上'
+          = f.password_field :password, class: 'user_password', id: 'password', placeholder: '７文字以上'
         .field_checkbox
           = f.check_box :password, checked: false, class: "checkbox"
           = f.label :"パスワードを表示する", class: 'check_password'
@@ -42,25 +40,25 @@
             = f.label :"お名前(全角)"
             %span.min #{required}
           .field-input
-            = f.text_field :lastname, placeholder: '例）佐藤'
-            = f.text_field :firstname, placeholder: '例）太郎'
+            = f.text_field :lastname, placeholder: '例）佐藤', id: 'lastname'
+            = f.text_field :firstname, placeholder: '例）太郎', id: 'firstname'
         .field
           .field-label
             = f.label :"お名前カナ(全角)"
             %span.min #{required}
           .field-input
-            = f.text_field :lastname_kana, placeholder: '例）サトウ'
-            = f.text_field :firstname_kana, placeholder: '例）タロウ'
+            = f.text_field :lastname_kana, placeholder: '例）サトウ', id: 'lastname_kana'
+            = f.text_field :firstname_kana, placeholder: '例）タロウ', id: 'firstname_kana'
         .field
           .field-label
             = f.label :"生年月日"
             %span.min #{required}
           .field-input
-            = f.select :birthday_year, [*1900..2019],:prompt=>"--"
+            = f.select :birthday_year, [*1900..2019],:prompt=>"--", id: 'birthday_year'
             %span 年
-            = f.select :birthday_month, [*1..12],:prompt=>"--"
+            = f.select :birthday_month, [*1..12],:prompt=>"--", id: 'birthday_month'
             %span 月
-            = f.select :birthday_day, [*1..31],:prompt=>"--"
+            = f.select :birthday_day, [*1..31],:prompt=>"--", id: 'birthday_day'
             %span 日
         .registration_message
           %p.regime
