マイページviewです
お知らせ、、やる事リスト保留です。

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,7 @@
+//variables
+@import "variables/mixins";
+
+
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
 
@@ -6,6 +10,12 @@
 @import "config/colors";
 @import "config/font-size";
 @import "config/reset";
+
+//mypages
+@import "mypages/sidebar";
+
+
+
 
 // 各コントローラー
 @import "homes/home";
