--- a/app/assets/stylesheets/mypages/mypage.scss
+++ b/app/assets/stylesheets/mypages/mypage.scss
@@ -1,3 +1,150 @@
-// Place all the styles related to the mypage controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+@import "variables/mixins";
+
+body {
+  background-color: #f5f5f5;
+  .main {
+    height: 1250px;
+    width: 1020px;
+    margin: 40px auto 0;
+    .mypage-container {
+      height: 622px;
+      width: 700px;
+      box-sizing: border-box;
+      float: right;
+      .mypage-header {
+        height: 200px;
+        width: 700px;
+        padding: 72px 16px 24px;
+        box-sizing: border-box;
+        text-align: center;
+        background-image: url(fmarket.jpg);
+        background-position: 50% 45%;
+        background-size: cover;
+        &__image {
+          height: 60px;
+          width: 60px;
+          margin: 0, 320px;
+          background-image: url(user.jpg);
+          border-radius: 50%;
+          display: inline-block;
+          vertical-align:middle;
+          background-size: cover;
+          background-repeat: no-repeat;
+          background-position: 50% 10%;
+        }
+        &__name {
+          @include mypage_name_chara;
+          font-weight: bold;
+          margin-top: 8px;
+        }
+        &__evaluation {
+          @include mypage_name_chara;
+          display :inline-block;
+        }
+        &__evaluation-num {
+          @extend .mypage-header__name;
+          margin-left: 8px;
+          display :inline-block;
+        }
+        &__exhibit {
+          @extend .mypage-header__evaluation;
+          margin-left: 8px;
+        }
+        &__exhibit-num {
+          @extend .mypage-header__evaluation-num;
+        }
+      }
+    }
+
+    .purchased-product {
+      height: 72px;
+      background-color: #fff;
+      margin-top: 40px;
+      padding: 0 16px;
+      font-size: 18px;
+      font-weight: bold;
+      line-height: 72px;
+    }
+    .list-line {
+      list-style: none;
+      font-size:0;
+      display: flex;
+      width: 100%;
+      height: 2px;
+      box-sizing: border-box;
+      list-style: none;
+      .active-line{
+        height: 2px;
+        width: 50%;
+        background-color: #ea532d;
+  }
+  .past-line {
+    @extend .active-line;
+    background-color: #EEE;
+  }
+}
+  .list {
+    height: 72px;
+    width: 100%;
+    font-size:0;
+    display: flex;
+    box-sizing: border-box;
+    list-style: none;
+    .active {
+      height: 72px;
+      width: 50%;
+      font-size: 18px;
+      font-weight: bold;
+      background-color: #fff;
+      text-align: center;
+      line-height: 72px;
+      list-style: none;
+              }
+    .past {
+      height: 72px;
+      width: 50%;
+      font-size: 18px;
+      font-weight: bold;
+      background-color: #EEE;
+      text-align: center;
+      line-height: 72px;
+    }
+  }
+    .report-areas {
+      height: 235px;
+      width: 700px;
+      font-size: 18px;
+      font-weight: bold;
+      color: #808080;
+      background-color: #fff;
+      background-image: url("logo_gray");
+      background-size: 50% 50%;
+      background-repeat:no-repeat;
+      background-position:50%;
+      text-align: center;
+      line-height: 390px;
+      list-style: none;
+    }
+    .report-area-todo {
+      list-style: none;
+      display: none;
+    }
+    .report-areas .report-areas-info {
+      display: block;
+    }
+    .gray-logo {
+      height: 100px;
+      width: 100px;
+    }
+    .report-area__sentence {
+      margin-top: 10px;
+    }
+  }
+  .side-bar {
+    height: 1250px;
+    width: 280px;
+    background-color: lightgoldenrodyellow;
+    float: left;
+  }
+}
+
