マイページviewです
お知らせ、、やる事リスト保留です。

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,7 @@
 // 各コントローラー
 @import "homes/home";
 @import "mypages/mypage";
+@import "mypages/edit";
 @import "mypages/logout";
 @import "mypages/sidebar";
 @import "signups/signup.scss";
