--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,4 @@
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
-@import 'signups/step1.scss'
+@import 'signups/step1.scss';
+@import 'addresses/new.scss';
