--- a/app/views/signups/step1.html.haml
+++ b/app/views/signups/step1.html.haml
@@ -40,25 +40,25 @@
             = f.label :"お名前(全角)"
             %span.min #{required}
           .field-input
-            = f.text_field :lastname, placeholder: '例）佐藤', id: 'lastname'
-            = f.text_field :firstname, placeholder: '例）太郎', id: 'firstname'
+            = f.text_field :lastname, placeholder: '例）佐藤', id: 'user_lastname'
+            = f.text_field :firstname, placeholder: '例）太郎', id: 'user_firstname'
         .field
           .field-label
             = f.label :"お名前カナ(全角)"
             %span.min #{required}
           .field-input
-            = f.text_field :lastname_kana, placeholder: '例）サトウ', id: 'lastname_kana'
-            = f.text_field :firstname_kana, placeholder: '例）タロウ', id: 'firstname_kana'
+            = f.text_field :lastname_kana, placeholder: '例）サトウ', id: 'user_lastname_kana'
+            = f.text_field :firstname_kana, placeholder: '例）タロウ', id: 'user_firstname_kana'
         .field
           .field-label
             = f.label :"生年月日"
             %span.min #{required}
           .field-input
-            = f.select :birthday_year, [*1900..2019],:prompt=>"--", id: 'birthday_year'
+            = f.select :birthday_year, [*1900..2019],:prompt=>"--", id: 'user_birthday_year'
             %span 年
-            = f.select :birthday_month, [*1..12],:prompt=>"--", id: 'birthday_month'
+            = f.select :birthday_month, [*1..12],:prompt=>"--", id: 'user_birthday_month'
             %span 月
-            = f.select :birthday_day, [*1..31],:prompt=>"--", id: 'birthday_day'
+            = f.select :birthday_day, [*1..31],:prompt=>"--", id: 'user_birthday_day'
             %span 日
         .registration_message
           %p.regime
