Top page_Complete
トップページ全体フロント実装

--- a/app/assets/stylesheets/homes/home.scss
+++ b/app/assets/stylesheets/homes/home.scss
@@ -126,52 +126,319 @@ img.footer-logo{
 
 
 .Slide-menu{
-  height: 390px;
+  height: 250px;
   width: 100%;
   background-color: darksalmon;
   text-align: center;
+  background-image: url("https://image.shutterstock.com/image-vector/pop-art-superhero-young-handsome-260nw-620435939.jpg");
+  background-size: inherit;
+
+
+  &__1{
+
+  }
+
+
+}
+
+img.slide1{
 
 }
 
 main{
-  height: 6028px;
+  height: 1200x;
   width: 1028px;
 
 .MainMenu{
 
   &__FavoriteItems{
-    height: 254px;
-    background-color: deeppink;
-    width: 100%;
+    height: 280px;
+    background-color: #f0821e;
+    width: 1020px;
+    margin-left: 153px;
+    margin-top: 30px;
 
+    &__Header{
+      height: 50px;
+      display: flex;
+      font-weight: 600;
+      line-height: 1.4em;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: space-between;
+      padding: 10px;
+
+    }
+
+
+    &__Body{
+      &__Items{
+
+        &__All{
+
+          &__List{
+            // height: 300px;
+            // width: 250px;
+            padding: 30px;
+            float: left;
+
+            &__image{
+              // width: 200px;
+            }
+          }
+        }
+      }
+    }
   }
+
   &__CategoryLists{
     height: 171px;
-    width: 100%;
+    width: 1366px;
+    background-color: rgb(255, 255, 255);
 
+    &__List{
 
+      &__All{
+        height: 40px;
+        width: 100%;
+        margin-left: 320px;
+        align-items: center;
+
+        &__list{
+        
+          display: block;
+          font-size: 14px;
+          height: 32px;
+          width: 180px;
+        
+          padding: 10px;
+          margin: 10px;
+
+          float: left;
+
+          text-align: center;
+          background-color: #dddddd ;
+          border-radius: 20px;
+      
+        }
+      }
+    }
   }
+
   &__CategoryItems{
-    height: 2614px;
+    height: 500px;
     background-color: deepskyblue;
     width: 100%;
+    margin-left: 153px;
+
+    &__Header{
+      display: flex;
+      font-weight: 600;
+      line-height: 1.4em;
+      margin: 0;
+      padding: 0;
+
+      height: 50px;
+      justify-content: space-between;
+      padding: 15px;
+
+
+    }
+
+    &__Body{
+
+    
+      &__Items{
+
+      
+        &__All{
+
+          &__List{
+            height: 300px;
+            width: 250px;
+            padding: 10px;
+            float: left;
+
+            &__image{
+              width: 200px;
+
+            }
+          }
+        }
+  
+      }
+    }
+
+
+h3.category-item-title{
+  font-size: 24px;
+}
+
+p.show-detail{
+  float: right;
+
+}
+
+figure.body-item{
+
+}
+
 
 
   }
   &__BrandLists{
     height: 171px;
-    width: 100%;
-
-
+    width: 1366px;
+    background-color: rgb(255, 255, 255);
+  
+      &__List{
+  
+        &__All{
+          height: 40px;
+          width: 100%;
+          margin-left: 500px;
+          justify-content: center;
+          float: left;
+  
+          &__list{
+          
+            display: inline-block;
+            font-size: 14px;
+            height: 32px;
+          
+            padding: 10px;
+            margin: 10px;
+  
+            text-align: center;
+            background-color: #dddddd ;
+            border-radius: 20px;
+        
+          }
+        }
+      }
   }
+  
+
   &__BrandItems{
-    height: 2614px;
+    height: 500px;
     background-color: deepskyblue;
     width: 100%;
+    margin-left: 153px;
+    margin-bottom: 50px;
 
+    &__Header{
+      display: flex;
+      font-weight: 600;
+      line-height: 1.4em;
+      margin: 0;
+      padding: 0;
+
+      height: 50px;
+      justify-content: space-between;
+      padding: 15px;
+
+
+    }
+
+    &__Body{
+
+    
+      &__Items{
+
+      
+        &__All{
+
+          &__List{
+            height: 300px;
+            width: 250px;
+            padding: 10px;
+            float: left;
+
+            &__image{
+              width: 200px;
+
+            }
+          }
+        }
+  
+      }
+    }
   }
+  
 }
 }
+
+h3.brand-item-title{
+  font-size: 24px;
+}
+
+figcaption{
+  display: block;
+  height: 50px;
+  width: 200px;
+  display: flex;
+  justify-content: center;
+  z-index: 0;
+  background-color: white;
+  border-style: ridge;
+
+}
+
+span.body-item-pricetag{
+  align-items: center;
+  background: rgba(0,0,0,.4);
+  border-radius: 0 14px 14px 0;
+  bottom: 8px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  color: #fff;
+  display: inline-flex;
+  font-size: 17px;
+  height: 32px;
+  height: 28px;
+  letter-spacing: .02em;
+  margin: 0;
+  padding: 0 12px;
+  position: absolute;
+  z-index: 2;
+
+}
+
+img.body-item-image{
+  display: block;
+  height: 230px;
+  width: 200px;
+  border-style: groove;
+  position: relative;
+}
+
+img.favorite-item-image{
+  display: block;
+  height: 150px;
+  width: 180px;
+  border-style: outset;
+  position: relative;
+}
+    
+
+
+
+h2.category-title{
+  text-align: center;
+  display: block;
+  padding-top: 20px;
+
+}
+
+
+a.category-list{
+  display: inline-block;
+  display: flex;
+  justify-content: center;
+
+}
+
 
 
 ul{
@@ -189,10 +456,67 @@ li{
 }
 
 
-footer{
-  height: 389px;
+aside{
+  height: 180px;
   width: 100%;
-  background-color: darkorange;
+  background-color: yellow;
+  background-image: url("https://sozai-good.com/uploads/40254/40254_sample.png");
+  background-size: inherit;
+  
+  display: flex;
+  justify-content: center;
+
+
+
+  &Aside__Text{
+
+    &__Lists{
+
+    }
+
+  }
+
+  &Aside__Image{ 
+    display: block;    
+
+}
+
+
+}
+
+p.aside-text1{
+  color: rgb(255, 255, 255);
+  font-size: 24px;
+  text-shadow: 1px 1px 0 gray,
+               -1px 1px 0 gray,
+               1px -1px 0 gray,
+               -1px -1px 0 gray;
+
+}
+
+p.aside-text2{
+  color: rgb(255, 255, 255);
+  font-size: 24px;
+  text-shadow: 1px 1px 0 gray,
+              -1px 1px 0 gray,
+              1px -1px 0 gray,
+              -1px -1px 0 gray;
+
+}
+
+
+img.aside-image1{
+  display: block;
+  height: 180px;
+  width: 180px;
+  padding-left: 20px;
+
+}
+
+footer{
+  height: 289px;
+  width: 100%;
+  background-color: #193278;
   color: #ffffff;
   position: relative;
 }
