--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -17,7 +17,6 @@
                                 %line.cls-1{x1: "36.41", x2: "0.5", y1: "52.41", y2: "31.67"}
                                 %line.cls-1{x1: "72.32", x2: "36.41", y1: "33.2", y2: "50.88"}
                                 %text.cls-2{transform: "translate(86.41 62.77)"} Fmarket
-                            -# %svg.header-logo{alt: "Fmarket", src: "assets/images/fmarket_logo_red.svg"}/
                     .HeaderTop__Menu__header-search
                         %form.search{action: "/jp/search/"}
                         %input.search{name: "keyword", placeholder: "何かお探しですか？", type: "search", value: ""}/
@@ -44,24 +43,150 @@
                         マイページ
 
     .Slide-menu
-        スライドしょーだお
         .Slide-menu__1
+            -# %img.slide1{:alt => "sample1", :src => "app/assets/images/sample1.jpg"}/
+
         .Slide-menu__2
+
     %main
         .MainMenu
             .MainMenu__FavoriteItems
-                いいね！した商品
+                .MainMenu__FavoriteItems__Header
+                    %h3.favorite-item-title いいね！した商品
+                    %p.show-detail すべて見る >
+                .MainMenu__FavoriteItems__Body
+                    .MainMenu__FavoriteItems__Body__Items
+                        .MainMenu__FavoriteItems__Body__Items__All
+                            .MainMenu__FavoriteItems__Body__Items__All__List
+                                .MainMenu__FavoriteItems__Body__Items__All__List__image
+                                    %img.favorite-item-image{:alt => "", :src => "https://static.mercdn.net/item/detail/orig/photos/m68735417310_1.jpg?1571708042"}/
+                                    -# %span.body-item-pricetag{"aria-label" => "Price"} ¥12,000
+                            .MainMenu__FavoriteItems__Body__Items__All__List
+                                .MainMenu__FavoriteItems__Body__Items__All__List__image
+                                    %img.favorite-item-image{:alt => "", :src => "https://static.mercdn.net/item/detail/orig/photos/m68735417310_1.jpg?1571708042"}/
+                                    -# %span.body-item-pricetag{"aria-label" => "Price"} ¥12,000
+                            .MainMenu__FavoriteItems__Body__Items__All__List
+                                .MainMenu__FavoriteItems__Body__Items__All__List__image
+                                    %img.favorite-item-image{:alt => "", :src => "https://static.mercdn.net/item/detail/orig/photos/m68735417310_1.jpg?1571708042"}/
+                                    -# %span.body-item-pricetag{"aria-label" => "Price"} ¥12,000
+                            .MainMenu__FavoriteItems__Body__Items__All__List
+                                .MainMenu__FavoriteItems__Body__Items__All__List__image
+                                    %img.favorite-item-image{:alt => "", :src => "https://static.mercdn.net/item/detail/orig/photos/m68735417310_1.jpg?1571708042"}/
+                                    -# %span.body-item-pricetag{"aria-label" => "Price"} ¥12,000
+
+
+
             .MainMenu__CategoryLists
-                人気のカテゴリー
+                %h2.category-title 人気のカテゴリー
+                .MainMenu__CategoryLists__List
+                    .MainMenu__CategoryLists__List__All
+                        .MainMenu__CategoryLists__List__All__list
+                            %a.category-list 福岡
+                        .MainMenu__CategoryLists__List__All__list
+                            %a.category-list 明太子
+                        .MainMenu__CategoryLists__List__All__list
+                            %a.category-list めんたいパーク
+                        .MainMenu__CategoryLists__List__All__list
+                            %a.category-list 赤い皮に包まれた魚卵
+
             .MainMenu__CategoryItems
-                XXXカテゴリー新着アイテム
+                .MainMenu__CategoryItems__Header
+                    %h3.category-item-title MENTAI 新着アイテム
+                    %p.show-detail もっと見る >
+                .MainMenu__CategoryItems__Body
+                    .MainMenu__CategoryItems__Body__Items
+                        .MainMenu__CategoryItems__Body__Items__All
+                            .MainMenu__CategoryItems__Body__Items__All__List
+                                %div{:style => "visibility: visible; transition: all 0.5s ease 0s; opacity: 1;"}
+                                    %figure.body-item
+                                        .MainMenu__CategoryItems__Body__Items__All__List__image
+                                            -# %span.body-item-pricetag{"aria-label" => "Price"} ¥12,000
+                                            %img.body-item-image{:alt => "", :src => "https://static.mercdn.net/item/detail/orig/photos/m51605700246_1.jpg?1573572058"}/
+                                        %figcaption
+                                            %span セール13000円→12000円　めんたいマヨネーズ
+
+                            .MainMenu__CategoryItems__Body__Items__All__List
+                                %div{:style => "visibility: visible; transition: all 0.5s ease 0s; opacity: 1;"}
+                                    %figure.body-item
+                                        .MainMenu__CategoryItems__Body__Items__All__List__image
+                                            -# %span.body-item-pricetag{"aria-label" => "Price"} ¥12,000
+                                            %img.body-item-image{:alt => "", :src => "https://static.mercdn.net/item/detail/orig/photos/m51605700246_1.jpg?1573572058"}/
+                                        %figcaption
+                                            %span セール13000円→12000円　めんたいマヨネーズ
+
+                            .MainMenu__CategoryItems__Body__Items__All__List
+                                %div{:style => "visibility: visible; transition: all 0.5s ease 0s; opacity: 1;"}
+                                    %figure.body-item
+                                        .MainMenu__CategoryItems__Body__Items__All__List__image
+                                            -# %span.body-item-pricetag{"aria-label" => "Price"} ¥12,000
+                                            %img.body-item-image{:alt => "", :src => "https://static.mercdn.net/item/detail/orig/photos/m51605700246_1.jpg?1573572058"}/
+                                        %figcaption
+                                            %span セール13000円→12000円　めんたいマヨネーズ
+
+
+
+
             .MainMenu__BrandLists
-                人気のブランド
+                %h2.category-title 人気のブランド
+                .MainMenu__BrandLists__List
+                    .MainMenu__BrandLists__List__All
+                        .MainMenu__BrandLists__List__All__list
+                            %a.brand-list ドイツ
+                        .MainMenu__BrandLists__List__All__list
+                            %a.brand-list スイス
+                        .MainMenu__BrandLists__List__All__list
+                            %a.brand-list ジョージア
+                        .MainMenu__BrandLists__List__All__list
+                            %a.brand-list オーロラ
+
             .MainMenu__BrandItems
-                XXXブランド新着アイテム
+                .MainMenu__BrandItems__Header
+                    %h3.brand-item-title 魚卵ブランド 新着アイテム
+                    %p.show-detail もっと見る >
+                .MainMenu__BrandItems__Body
+                    .MainMenu__BrandItems__Body__Items
+                        .MainMenu__BrandItems__Body__Items__All
+                            .MainMenu__BrandItems__Body__Items__All__List
+                                %div{:style => "visibility: visible; transition: all 0.5s ease 0s; opacity: 1;"}
+                                    %figure.body-item
+                                        .MainMenu__BrandItems__Body__Items__All__List__image
+                                            -# %span.body-item-pricetag{"aria-label" => "Price"} ¥12,000
+                                            %img.body-item-image{:alt => "Thumbnail of \"セール13000円→12000円　Douxmiere キュービックネックレス\"", :src => "https://static.mercdn.net/thumb/photos/m68548725798_1.jpg?1562335238"}/
+                                        %figcaption
+                                            %span セール13000円→12000円　めんたいマヨネーズ
+
+                            .MainMenu__BrandItems__Body__Items__All__List
+                                %div{:style => "visibility: visible; transition: all 0.5s ease 0s; opacity: 1;"}
+                                    %figure.body-item
+                                        .MainMenu__BrandItems__Body__Items__All__List__image
+                                            -# %span.body-item-pricetag{"aria-label" => "Price"} ¥12,000
+                                            %img.body-item-image{:alt => "Thumbnail of \"セール13000円→12000円　Douxmiere キュービックネックレス\"", :src => "https://static.mercdn.net/thumb/photos/m68548725798_1.jpg?1562335238"}/
+                                        %figcaption
+                                            %span セール13000円→12000円　めんたいマヨネーズ
+
+                            .MainMenu__BrandItems__Body__Items__All__List
+                                %div{:style => "visibility: visible; transition: all 0.5s ease 0s; opacity: 1;"}
+                                    %figure.body-item
+                                        .MainMenu__BrandItems__Body__Items__All__List__image
+                                            -# %span.body-item-pricetag{"aria-label" => "Price"} ¥12,000
+                                            %img.body-item-image{:alt => "Thumbnail of \"セール13000円→12000円　Douxmiere キュービックネックレス\"", :src => "https://static.mercdn.net/thumb/photos/m68548725798_1.jpg?1562335238"}/
+                                        %figcaption
+                                            %span セール13000円→12000円　めんたいマヨネーズ
+
+
+
 
     %aside
-        
+        .Aside__Text
+            .Aside__Text__Lists
+                %p.aside-text1 Fmarket  わくわくフリマアプリ
+                %p.aside-text2 今すぐ出品してみよう！
+            %img.aside-app{:alt => "", :src => "https://web-jp-assets.mercdn.net/_next/static/images/app-store-a5c17948c6fd6d5b60b13d421cd60b35.svg"}/
+            %img.aside-app{:alt => "", :src => "https://web-jp-assets.mercdn.net/_next/static/images/google-play-495575abb895b405aa6336b2a4304958.svg"}/
+
+        .Aside__Image
+            -# %img.sc-ESoVU.gcFfDJ{:alt => "", :src => "https://web-jp-assets.mercdn.net/_next/static/images/mercari_icon-f75780e32e41e052c8aaa8b446331cd8.png"}/
+            %img.aside-image1{:alt => "", :src => "https://web-jp-assets.mercdn.net/_next/static/images/download_app_pc-a4418175e8be071827ac88d073f40e4a.png"}/
 
     %footer
         %nav
@@ -71,13 +196,6 @@
                     %ul.FooterMenu__list_wrapper
                         %li.FooterMenu__list__small サービス詳細
                         %li.FooterMenu__list__small XXXXXX
-                        / TwitterとFacebookアイコンはいらない？
-                        -# %a.sc-jxGEyO.hbBsqD{href: "https://twitter.com/mercari_jp", target: "_blank"}
-                        -#     %svg.sc-bRBYWo.sc-dEfkYy.bQXLvV{"aria-hidden" => "true", height: "16", viewbox: "0 0 21 16", width: "21"}
-                        -#     %path{d: "M6.343 15.969c7.61 0 11.773-6.134 11.773-11.444 0-.172 0-.345-.008-.517a8.303 8.303 0 0 0 2.066-2.086 8.576 8.576 0 0 1-2.38.635A4.07 4.07 0 0 0 19.616.329a8.377 8.377 0 0 1-2.63.973 4.186 4.186 0 0 0-3.019-1.27c-2.283 0-4.14 1.803-4.14 4.023 0 .314.041.62.106.918A11.866 11.866 0 0 1 1.404.769a3.936 3.936 0 0 0-.557 2.023c0 1.396.735 2.628 1.84 3.35a4.278 4.278 0 0 1-1.872-.503v.055c0 1.945 1.428 3.577 3.317 3.945-.347.094-.71.141-1.09.141-.266 0-.524-.023-.774-.07.524 1.6 2.057 2.76 3.865 2.792a8.452 8.452 0 0 1-5.14 1.725 8.19 8.19 0 0 1-.985-.054 12.02 12.02 0 0 0 6.335 1.796", fill: "currentColor", "fill-rule" => "evenodd"}
-                        -# %a.sc-jxGEyO.hbBsqD{href: "https://www.facebook.com/mercarijp", target: "_blank"}
-                        -#     %svg.sc-kEYyzF.sc-gacfCG.hqOMdY{"aria-hidden" => "true", height: "16", viewbox: "0 0 16 16", width: "16"}
-                        -#     %path{d: "M15.111 0H.89A.889.889 0 0 0 0 .889V15.11c0 .491.398.889.889.889h7.658V9.813H6.469V7.391h2.078V5.613c0-2.066 1.262-3.193 3.11-3.193.623-.002 1.244.03 1.863.096v2.15h-1.276c-1.002 0-1.197.478-1.197 1.178v1.543h2.397l-.31 2.422h-2.087V16h4.064c.491 0 .889-.398.889-.889V.89A.889.889 0 0 0 15.111 0z", fill: "currentColor", "fill-rule" => "evenodd"}
                 
                 .FooterMenu__list
                     %h2.FooterMenu__list__title ヘルプ＆ガイド
