--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
+    %meta{content: "text/html; charset=UTF-8", "http-equiv", "Content-Type"}/
     %title Fmarket わくわくフリマアプリ
     = csrf_meta_tags
     = csp_meta_tag
@@ -10,3 +10,4 @@
   %body
     = yield
    
+
